sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_depart_empty/errors.duarouter
Error: Attribute 'depart' in definition of a vehicle is empty.
Error: Attribute 'depart' in definition of vehicle '1' is empty.
Quitting (on error).
